expand/collapse cue fix more edge cases, fix broken non-cytoscape tooltips, use unfold/fold icons

--- a/src/styles/features/pathways/tooltip.css
+++ b/src/styles/features/pathways/tooltip.css
@@ -1,3 +1,7 @@
+.tooltip-description {
+  padding: 0 1em;
+}
+
 .metadata-tooltip {
   max-width: 300px;
   min-width: 10em;
